--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,10 +10,28 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- script: Deploying flask app
+  displayName: 'Deploy flask app in k8s cluster'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- task: CopyFiles@2
+  displayName: 'Copy deployment file to bastion server'
+  inputs:
+    SourceFolder: '$(Build.SourcesDirectory)'
+    Contents: 'flask-app-deployment.yaml'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)/deployment'
+
+- task: SSH@0
+  displayName: 'Copy deployment file to bastion server'
+  inputs:
+    sshEndpoint: 'bastion-server'
+    runOptions: 'commands'
+    commands: |
+      scp $(Build.ArtifactStagingDirectory)/deployment/flask-app-deployment.yaml azureuser@ccp-pulse-dev-bastion.canadacentral.cloudapp.azure.com:/home/azureuser/flask-demo-app/flask-app-deployment.yaml
+
+- task: KubernetesManifest@0
+  displayName: 'Apply K8s deployment'
+  inputs:
+    connectionType: 'None'
+    command: 'apply'
+    arguments: '-f /home/azureuser/flask-demo-app/flask.yaml'
+    secrets: 'isuru-rathnayake'
