--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,17 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- script: Deploying flask app
+  displayName: 'Deploy flask app in k8s cluster'
 
+- script: |
+    echo Add other tasks to build, test, and deploy your project.
+    echo See https://aka.ms/yaml
+    echo $(Build.ArtifactStagingDirectory)
+    ls -la
+    pwd
+  displayName: 'Run a multi-line script'
+  
 - task: CopyFiles@2
   displayName: 'Copy deployment file to bastion server'
   inputs:
