--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,16 +15,13 @@ steps:
   inputs:
     PathtoPublish: $(build.artifactstagingdirectory)
     ArtifactName: 'PublishBuildArtifacts'
-- task: PowerShell@2
-  inputs:
-    targetType: 'inline'
-    script: 'Get-ChildItem -Path $(Build.SourcesDirectory)
+
 - task: CopyFiles@2
   displayName: 'Copy deployment file to bastion server'
   inputs:
-    SourceFolder: '$(Build.SourcesDirectory)'
+    SourceFolder: $(Build.SourcesDirectory)
     Contents: 'flask-app-deployment.yaml'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    TargetFolder: $(Build.ArtifactStagingDirectory)
     
 - task: CopyFilesOverSSH@0
   inputs:
