--- a/flask-app-deployment.yaml
+++ b/flask-app-deployment.yaml
@@ -19,6 +19,18 @@ spec:
           image: ccpcontainerregistry.azurecr.io/flask-app:13
           ports:
             - containerPort: 80
+          readinessProbe:
+          httpGet:
+            path: /hello
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 10
+          livenessProbe:
+          httpGet:
+            path: /hello
+            port: 80
+          initialDelaySeconds: 15
+          periodSeconds: 20
 
 ---
 apiVersion: v1
