fix mysql pod issue

--- a/mysql-database.yaml
+++ b/mysql-database.yaml
@@ -19,7 +19,9 @@ spec:
           image: mysql:5.7.42
           ports:
             - containerPort: 3306
-
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              value: password          
 ---
 apiVersion: v1
 kind: Service
