security_context added

--- a/flask-app-deployment.yaml
+++ b/flask-app-deployment.yaml
@@ -17,7 +17,12 @@ spec:
       containers:
         - name: flask-app
           image: ccpcontainerregistry.azurecr.io/flask-app:13
-          ports:
+          securityContext:
+            allowPrivilegeEscalation: false
+            runAsUser: 2001
+            fsGroup: 3001
+            readOnlyRootFilesystem: true
+          ports:  
             - containerPort: 80
           readinessProbe:
             httpGet:
@@ -46,21 +51,3 @@ spec:
       port: 80
       targetPort: 80
   type: LoadBalancer
-
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: flask-app-ingress
-  namespace: demo-app-flask
-spec:
-  rules:
-    - http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: flask-app-service
-                port:
-                  number: 80
